// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerHeader /> rendering should render background image 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 20px;
}

.c9 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.7);
  color: #000000;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c9:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c9:hover:not([disabled]),
.c9:focus-visible:not([disabled]) {
  color: #000000;
  background-color: rgba(255,255,255,0.3);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 160px;
}

.c1 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: -0px;
  left: 0;
  width: 100%;
  height: calc(100% + 0px);
  z-index: -1;
  background-image: url(./img-path.jpg);
}

.c1:before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(255,255,255,0.25);
}

.c2 {
  max-width: 1600px;
  margin: 0 auto;
  padding: 0 80px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding-top: 64px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 16px;
}

.c5 {
  margin: 0;
  margin-right: 8px;
  margin-bottom: 8px;
  display: inline-block;
  word-break: break-word;
}

.c5 h4 {
  display: inline;
  word-break: break-word;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
}

.c6 {
  color: #000000;
  margin: 0;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 56px;
  line-height: 64px;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
}

@media (max-width:1280px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (max-width:1600px) {
  .c2 {
    padding: 0 80px;
  }
}

@media (max-width:1280px) {
  .c2 {
    padding: 0 60px;
  }
}

@media (max-width:1024px) {
  .c2 {
    padding: 0 50px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 40px;
  }
}

@media (max-width:500px) {
  .c2 {
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c5 {
    text-align: center;
  }
}

@media (max-width:1024px) {
  .c6 {
    font-size: 40px;
    line-height: 48px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 32px;
    line-height: 36px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class=""
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                color="#000000"
              >
                Bored Geek Club
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              aria-label="Share"
              class="c9"
            >
              <span
                class="c10"
              >
                <img
                  alt=" icon"
                  src="[object Object]"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BannerHeader /> rendering should render custom string props 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 20px;
}

.c9 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.7);
  color: #000000;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c9:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c9:hover:not([disabled]),
.c9:focus-visible:not([disabled]) {
  color: #000000;
  background-color: rgba(255,255,255,0.3);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 160px;
}

.c1 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: -0px;
  left: 0;
  width: 100%;
  height: calc(100% + 0px);
  z-index: -1;
}

.c2 {
  max-width: 1600px;
  margin: 0 auto;
  padding: 0 80px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding-top: 64px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 16px;
}

.c5 {
  margin: 0;
  margin-right: 8px;
  margin-bottom: 8px;
  display: inline-block;
  word-break: break-word;
}

.c5 h4 {
  display: inline;
  word-break: break-word;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
}

.c6 {
  color: #000000;
  margin: 0;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 56px;
  line-height: 64px;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
}

@media (max-width:1280px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (max-width:1600px) {
  .c2 {
    padding: 0 80px;
  }
}

@media (max-width:1280px) {
  .c2 {
    padding: 0 60px;
  }
}

@media (max-width:1024px) {
  .c2 {
    padding: 0 50px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 40px;
  }
}

@media (max-width:500px) {
  .c2 {
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c5 {
    text-align: center;
  }
}

@media (max-width:1024px) {
  .c6 {
    font-size: 40px;
    line-height: 48px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 32px;
    line-height: 36px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class=""
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                color="#000000"
              >
                Bored Geek Club
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              aria-label="Share Label"
              class="c9"
            >
              <span
                class="c10"
              >
                <img
                  alt=" icon"
                  src="[object Object]"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BannerHeader /> rendering should render dark theme 1`] = `
<DocumentFragment>
  .c8 {
  border-radius: 8px;
  background-color: rgba(255,255,255,0.2);
  gap: 8px;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background-color: rgba(255,255,255,0.2);
}

.c8 > * {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c9 {
  font-family: 'Poppins',sans-serif;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.5);
  padding: 8px 12px;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 75px;
  background-color: rgba(255,255,255,0.1);
  color: #ffffff;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
}

.c12 {
  text-align: center;
  font-weight: 500;
  font-size: 12px;
}

.c11 {
  font-weight: 400;
  font-size: 32px;
}

.c13 {
  width: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 20px;
}

.c15 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.1);
  color: #ffffff;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c15:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c15:hover:not([disabled]),
.c15:focus-visible:not([disabled]) {
  color: #ffffff;
  background-color: rgba(255,255,255,0.3);
}

.c18 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.1);
  color: #ffffff;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c18:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c18:hover:not([disabled]),
.c18:focus-visible:not([disabled]) {
  color: #ffffff;
  background-color: rgba(255,255,255,0.3);
}

.c18 img {
  width: 32px;
}

.c17 {
  position: relative;
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 160px;
}

.c1 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: -0px;
  left: 0;
  width: 100%;
  height: calc(100% + 0px);
  z-index: -1;
  background-image: url(./img-path.jpg);
}

.c1:before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.25);
}

.c2 {
  max-width: 1600px;
  margin: 0 auto;
  padding: 0 80px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding-top: 64px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 16px;
}

.c5 {
  margin: 0;
  margin-right: 8px;
  margin-bottom: 8px;
  display: inline-block;
  word-break: break-word;
}

.c5 h4 {
  display: inline;
  word-break: break-word;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
}

.c6 {
  color: #ffffff;
  margin: 0;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 56px;
  line-height: 64px;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
}

@supports (-webkit-backdrop-filter:blur(15px)) or (backdrop-filter:blur(15px)) {
  .c8 {
    -webkit-backdrop-filter: blur(15px);
    backdrop-filter: blur(15px);
  }
}

@media (max-width:1280px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (max-width:1600px) {
  .c2 {
    padding: 0 80px;
  }
}

@media (max-width:1280px) {
  .c2 {
    padding: 0 60px;
  }
}

@media (max-width:1024px) {
  .c2 {
    padding: 0 50px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 40px;
  }
}

@media (max-width:500px) {
  .c2 {
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c5 {
    text-align: center;
  }
}

@media (max-width:1024px) {
  .c6 {
    font-size: 40px;
    line-height: 48px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 32px;
    line-height: 36px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class=""
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                color="#ffffff"
              >
                Bored Geek Club
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class=""
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    100k
                  </span>
                </div>
                <span
                  class="c12"
                >
                  NFTs
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    45k
                  </span>
                </div>
                <span
                  class="c12"
                >
                  Owners
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    10
                  </span>
                </div>
                <span
                  class="c12"
                >
                  For Sale
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <img
                    alt="ETH"
                    class="c13"
                    src="[object Object]"
                  />
                  <span
                    class="c11"
                  >
                    2.4k
                  </span>
                </div>
                <span
                  class="c12"
                >
                  Weekly Volume
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <img
                    alt="ETH"
                    class="c13"
                    src="[object Object]"
                  />
                  <span
                    class="c11"
                  >
                    1.8
                  </span>
                </div>
                <span
                  class="c12"
                >
                  Floor Price
                </span>
              </div>
            </div>
          </div>
          <div
            class="c14"
          >
            <button
              aria-label="Create"
              class="c15"
            >
              <span
                class="c16"
              >
                Create
              </span>
            </button>
            <div
              class="c17"
            >
              <button
                aria-label="Options"
                class="c18"
              >
                <span
                  class="c16"
                >
                  <img
                    alt=" icon"
                    src="[object Object]"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BannerHeader /> rendering should render default header with required props 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 20px;
}

.c9 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.7);
  color: #000000;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c9:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c9:hover:not([disabled]),
.c9:focus-visible:not([disabled]) {
  color: #000000;
  background-color: rgba(255,255,255,0.3);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 160px;
}

.c1 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: -0px;
  left: 0;
  width: 100%;
  height: calc(100% + 0px);
  z-index: -1;
}

.c2 {
  max-width: 1600px;
  margin: 0 auto;
  padding: 0 80px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding-top: 64px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 16px;
}

.c5 {
  margin: 0;
  margin-right: 8px;
  margin-bottom: 8px;
  display: inline-block;
  word-break: break-word;
}

.c5 h4 {
  display: inline;
  word-break: break-word;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
}

.c6 {
  color: #000000;
  margin: 0;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 56px;
  line-height: 64px;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
}

@media (max-width:1280px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (max-width:1600px) {
  .c2 {
    padding: 0 80px;
  }
}

@media (max-width:1280px) {
  .c2 {
    padding: 0 60px;
  }
}

@media (max-width:1024px) {
  .c2 {
    padding: 0 50px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 40px;
  }
}

@media (max-width:500px) {
  .c2 {
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c5 {
    text-align: center;
  }
}

@media (max-width:1024px) {
  .c6 {
    font-size: 40px;
    line-height: 48px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 32px;
    line-height: 36px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class=""
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                color="#000000"
              >
                Bored Geek Club
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              aria-label="Share"
              class="c9"
            >
              <span
                class="c10"
              >
                <img
                  alt=" icon"
                  src="[object Object]"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BannerHeader /> rendering should render hexagon avatar 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 20px;
}

.c9 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.7);
  color: #000000;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c9:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c9:hover:not([disabled]),
.c9:focus-visible:not([disabled]) {
  color: #000000;
  background-color: rgba(255,255,255,0.3);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 160px;
}

.c1 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: -0px;
  left: 0;
  width: 100%;
  height: calc(100% + 0px);
  z-index: -1;
}

.c2 {
  max-width: 1600px;
  margin: 0 auto;
  padding: 0 80px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding-top: 64px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 16px;
}

.c5 {
  margin: 0;
  margin-right: 8px;
  margin-bottom: 8px;
  display: inline-block;
  word-break: break-word;
}

.c5 h4 {
  display: inline;
  word-break: break-word;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
}

.c6 {
  color: #000000;
  margin: 0;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 56px;
  line-height: 64px;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
}

@media (max-width:1280px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (max-width:1600px) {
  .c2 {
    padding: 0 80px;
  }
}

@media (max-width:1280px) {
  .c2 {
    padding: 0 60px;
  }
}

@media (max-width:1024px) {
  .c2 {
    padding: 0 50px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 40px;
  }
}

@media (max-width:500px) {
  .c2 {
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c5 {
    text-align: center;
  }
}

@media (max-width:1024px) {
  .c6 {
    font-size: 40px;
    line-height: 48px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 32px;
    line-height: 36px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class=""
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                color="#000000"
              >
                Bored Geek Club
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <button
              aria-label="Share"
              class="c9"
            >
              <span
                class="c10"
              >
                <img
                  alt=" icon"
                  src="[object Object]"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BannerHeader /> rendering should render stats block 1`] = `
<DocumentFragment>
  .c8 {
  border-radius: 8px;
  background-color: rgba(255,255,255,0.2);
  gap: 8px;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 > * {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c9 {
  font-family: 'Poppins',sans-serif;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.5);
  padding: 8px 12px;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 75px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
}

.c12 {
  text-align: center;
  font-weight: 500;
  font-size: 12px;
}

.c11 {
  font-weight: 400;
  font-size: 32px;
}

.c13 {
  width: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 20px;
}

.c15 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 72px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 18px;
  border-radius: 4px;
  background-color: rgba(255,255,255,0.7);
  color: #000000;
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
}

.c15:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c15:hover:not([disabled]),
.c15:focus-visible:not([disabled]) {
  color: #000000;
  background-color: rgba(255,255,255,0.3);
}

.c0 {
  position: relative;
  width: 100%;
  padding-bottom: 160px;
}

.c1 {
  background-color: #EEEEEE;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: absolute;
  top: -0px;
  left: 0;
  width: 100%;
  height: calc(100% + 0px);
  z-index: -1;
}

.c2 {
  max-width: 1600px;
  margin: 0 auto;
  padding: 0 80px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding-top: 64px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 16px;
}

.c5 {
  margin: 0;
  margin-right: 8px;
  margin-bottom: 8px;
  display: inline-block;
  word-break: break-word;
}

.c5 h4 {
  display: inline;
  word-break: break-word;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
}

.c6 {
  color: #000000;
  margin: 0;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 56px;
  line-height: 64px;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
}

@supports (-webkit-backdrop-filter:blur(15px)) or (backdrop-filter:blur(15px)) {
  .c8 {
    -webkit-backdrop-filter: blur(15px);
    backdrop-filter: blur(15px);
  }
}

@media (max-width:1280px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (max-width:1600px) {
  .c2 {
    padding: 0 80px;
  }
}

@media (max-width:1280px) {
  .c2 {
    padding: 0 60px;
  }
}

@media (max-width:1024px) {
  .c2 {
    padding: 0 50px;
  }
}

@media (max-width:768px) {
  .c2 {
    padding: 0 40px;
  }
}

@media (max-width:500px) {
  .c2 {
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c5 {
    text-align: center;
  }
}

@media (max-width:1024px) {
  .c6 {
    font-size: 40px;
    line-height: 48px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 32px;
    line-height: 36px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class=""
          >
            <div
              class="c5"
            >
              <h2
                class="c6"
                color="#000000"
              >
                Bored Geek Club
              </h2>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class=""
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    100k
                  </span>
                </div>
                <span
                  class="c12"
                >
                  NFTs
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    45k
                  </span>
                </div>
                <span
                  class="c12"
                >
                  Owners
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    10
                  </span>
                </div>
                <span
                  class="c12"
                >
                  For Sale
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <img
                    alt="ETH"
                    class="c13"
                    src="[object Object]"
                  />
                  <span
                    class="c11"
                  >
                    2.4k
                  </span>
                </div>
                <span
                  class="c12"
                >
                  Weekly Volume
                </span>
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <img
                    alt="ETH"
                    class="c13"
                    src="[object Object]"
                  />
                  <span
                    class="c11"
                  >
                    1.8
                  </span>
                </div>
                <span
                  class="c12"
                >
                  Floor Price
                </span>
              </div>
            </div>
          </div>
          <div
            class="c14"
          >
            <button
              aria-label="Share"
              class="c15"
            >
              <span
                class="c16"
              >
                <img
                  alt=" icon"
                  src="[object Object]"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
